Fix spacing for hero

--- a/css/local.css
+++ b/css/local.css
@@ -4,10 +4,18 @@
   padding: 18px 0;
 }
 
+.if-cover {
+  display: block;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
 .if-cover img {
   position: absolute;
   display: block;
   min-width: 100%;
+  min-height: 100%;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
@@ -26,15 +34,15 @@
   height: 0;
 }
 
-/* .templateux-hero {
-  padding: 0 0 2em 0;
-} */
+.templateux-hero {
+  margin-bottom: 2em;
+}
 
 .templateux-section {
   padding: 0 0 2em 0;
 }
 
-.row {
+.templateux-section .row {
   padding-bottom: 2em;
 }
 
